settings/css/settings.scss
/* ... */
.nav-icon-security {
	background-image: url('../img/toggle-filelist.svg?v=1');
}

.nav-icon-clientsbox {
	background-image: url('../img/change.svg?v=1');
}

.nav-icon-federated-cloud {
	background-image: url('../img/share.svg?v=1');
}

.nav-icon-second-factor-backup-codes, .nav-icon-ssl-root-certificate {
	background-image: url('../img/password.svg?v=1');
}

#avatarform {
	.avatardiv {
		margin: 10px auto;
	}
	.federationScopeMenu {
		/* popover magic fix */
		margin-right: calc(-50% - 7px);
	}
	.warning {
		width: 100%;
	}
	.jcrop-keymgr {
		display: none !important;
	}
}

#displayavatar {
	text-align: center;
	p {
		text-align: left;
	}
}

#uploadavatarbutton, #selectavatar, #removeavatar {
	padding: 21px;
}

.jcrop-holder {
	z-index: 500;
}

#cropper {
	float: left;
	z-index: 500;
	/* float cropper above settings page to prevent unexpected flowing from dynamically sized element */
	position: fixed;
	background-color: rgba(0, 0, 0, 0.2);
	box-sizing: border-box;
	top: 45px;
	left: 0;
	width: 100%;
	height: calc(100% - 45px);
	.inner-container {
		z-index: 2001;
		/* above the top bar if needed */
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		background: #fff;
		color: #333;
		border-radius: $border-radius;
		box-shadow: 0 0 7px #888;
		padding: 15px;
		.jcrop-holder {
			box-shadow: 0 0 7px #888;
		}
		.button {
			margin-top: 15px;
		}
		.primary {
			float: right;
		}
	}
}

#personal-settings-avatar-container {
	display: inline-grid;
	grid-template-columns: 1fr;
	grid-template-rows: 2fr 1fr 1fr;
	vertical-align: top;
}

.profile-settings-container {
	display: inline-grid;
	grid-template-columns: 1fr;
	grid-template-rows: 1fr 2fr 1fr;
}


.icon-federation-menu {
	padding-left: 16px;
	background-size: 16px;
	background-position: left 8px;
	opacity: .3;
	margin-left: 10px;
	cursor: pointer;

	.icon-triangle-s {
		display: inline-block;
		vertical-align: middle;
		cursor: pointer;
	}
}

.personal-show-container {
	width: 100%;
}

.personal-settings-setting-box input {
	&[type='text'], &[type='email'], &[type='tel'], &[type='url'] {
		width: 100%;
	}
}

select {
	&#timezone,
	&#languageinput {
		width: 100%;
	}
}

input {
	&#pass1,
	&#pass2,
	&#passwordbutton {
		width: 100%;
	}
}

#personal-settings {
	display: grid;
	padding: 20px;
	max-width: 1500px;
	grid-template-columns:1fr 2fr 1fr;
	.section {
		padding: 10px 10px;
	}
}


@media (min-width: 1200px) and (max-width: 1400px) {
	#personal-settings {
		display: grid;
		grid-template-columns: 1fr 2fr;
		#personal-settings-avatar-container {
			grid-template-columns: 1fr;
			grid-template-rows: 1fr;
		}
		.personal-settings-container {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr 1fr 1fr;
		}
		.profile-settings-container {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr;
			grid-column: 2;
		}
	}
}

@media (max-width: 1200px) {
	#personal-settings {
		display: grid;
		grid-template-columns: 1fr;
		#personal-settings-avatar-container {
			grid-template-rows: 1fr;
		}
		.personal-settings-container {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr 1fr 1fr;
		}
		.profile-settings-container {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr;
		}
	}
}

@media (max-width: 560px) {
	#personal-settings {
		display: grid;
		grid-template-columns: 1fr;
		#personal-settings-avatar-container {
			grid-template-rows: 1fr;
		}
		.personal-settings-container {
			grid-template-columns: 1fr;
			grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
		}
		.profile-settings-container {
			grid-template-columns: 1fr;
			grid-template-rows: 1fr 1fr;
		}
	}
}

.personal-settings-container {
	display: inline-grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr 1fr 1fr 1fr;
	&:after {
		clear: both;
	}
	> div {
		h2 {
			position: relative;
			margin-bottom: 12px;
			display: inline-flex;
			flex-wrap: nowrap;
			justify-content: space-between;
			width: 100%;
			> label {
				white-space: nowrap;
				text-overflow: ellipsis;
				overflow: hidden;
			}
		}
		> form span {
			&[class^='icon-checkmark'], &[class^='icon-error'] {
				position: relative;
				right: 8px;
				top: -28px;
				pointer-events: none;
				float: right;
			}
		}
	}
	.verify {
		position: relative;
		left: 100%;
		top: 0;
		height: 0;
		img {
			padding: 12px 7px 6px;
		}
	}
	.verify-action {
		cursor: pointer;
	}
	input:disabled {
		background-color: white;
		color: black;
		border: none;
		opacity: 100;
	}
}

/* verify accounts */
/* only show pointer cursor when popup will be there */
.verification-dialog {
	display: none;
	right: -9px;
	top: 40px;
	width: 275px;
	p {
		padding: 10px;
	}
	.verificationCode {
		font-family: monospace;
		display: block;
		overflow-wrap: break-word;
	}
}

.federationScopeMenu {
	top: 44px;
	margin-right: calc(-50% + 30px); /* half - the triangle icon width - borders */
	&.bubble::after {
		right: 50%;
		transform: translate(50%, 0);
	}
	&.popovermenu {
		a.menuitem, label.menuitem {
			font-size: 12.8px;
			line-height: 1.6em;
		}
		.menuitem {
			font-size: 12.8px;
			line-height: 1.6em;
			.menuitem-text-detail {
				opacity: .75;
			}
			&.active {
				box-shadow: inset 2px 0 $color-primary;

				.menuitem-text {
					font-weight: 600;
				}
			}
		}
	}
}

#groups-groups {
	padding-top: 5px;
}

.clientsbox img {
	height: 60px;
}

#sslCertificate {
	tr.expired {
		background-color: rgba(255, 0, 0, 0.5);
	}
	td {
		padding: 5px;
	}
}

#displaynameerror,
#displaynamechanged {
	display: none;
}

input#identity {
	width: 20em;
}

#showWizard {
	display: inline-block;
}

.msg {
	&.success {
		color: #fff;
		background-color: #47a447;
		padding: 3px;
	}
	&.error {
		color: #fff;
		background-color: #d2322d;
		padding: 3px;
	}
}

.password-state {
	display: inline-block;
}

table.nostyle {
	label {
		margin-right: 2em;
	}
	td {
		padding: 0.2em 0;
	}
}
/* ... */

